@@ -103,7 +103,6 @@
 	<li>Undo/redo</li>
 	<li>Font styling &amp; sizing</li>
 	<li>Bulleted lists</li>
-	<li>Numbered lists <i>(under development)</i></li>
       </ul>
 
       <h2>Embracing Your Habitat</h2>
@@ -130,51 +129,41 @@
 
       <a name="download"><h1>Download</h1></a>
 
-      <p>Tomboy is currently in pre-release development, but you can still try
-      it out.  Tomboy is written in C# and utilizes the <a
+      <p>Tomboy is written in C# and utilizes the <a
       href="http://www.mono-project.com">Mono runtime</a> and <a
       href="http://gtk-sharp.sourceforge.net">Gtk#</a>.  Automatic
       spell-checking is provided by 
       <a href="http://gtkspell.sourceforge.net/">GtkSpell</a>.</p>
 
       <div id="download-link">
-        <p><h3><a href="http://download.gnome.org/sources/tomboy/0.4/tomboy-0.4.1.tar.gz"><b>Download the latest
-        stable release (0.4.1) here.</b></a></h3></p>
+        <p><h3><a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.0.tar.gz"><b>Download the latest
+        stable release (0.6.0) here.</b></a></h3></p>
       </div>
 
-      <p>The latest stable release (0.4.1) has the following new features and bugfixes:</p>
+      <p>The latest stable release (0.6.0) has the following new features and many bugfixes:</p>
       <ul>
-		<li>Support building with Gtk# 2.</li>
-		<li>New Sticky Notes import plugin (Sanford Armstrong).</li>
-		<li>Note loading code cleanups (Sebastian Rittau).</li>
-		<li>Use Tango icons by default.</li>
-		<li>Allow icon theming.</li>
-		<li>Support TOMBOY_PATH environment variable.</li>
-		<li><a href="http://svn.gnome.org/viewcvs/tomboy/trunk/NEWS?rev=679">And more...</a></li>
-		<li><a href="http://svn.gnome.org/viewcvs/tomboy/trunk/ChangeLog?rev=679">Detailed ChangeLog</a></li>
-      </ul>
-
-      <div id="download-link">
-        <p><h3><a href="http://download.gnome.org/sources/tomboy/0.5/tomboy-0.5.9.tar.gz"><b>Download the latest
-        development release (0.5.9) here. </b></a></h3></p>
-      </div>
-
-      <p>The latest development release (0.5.9) has some important
-      new features and bugfixes, including:</p>
-      <ul>
-		<li>This is a bugfix-only release...</li>
-		<li>Fix crash when dragging email with blank subject from Evolution (#408859).</li>
-		<li>Fix link uris when drag & drop from nautilus with multiple files (#412355).</li>
-		<li>Fix drag & drop behavior to insert dropped uris at mouse location (#330964).</li>
-		<li>Fix to only show sticky note importer if external sticky notes exist (#404739).</li>
-		<li>Fix to open search dialog in foreground (#411924, Wouter Bolsterlee).</li>
-		<li>Use default GNOME font settings by default (#358974, Wouter Bolsterlee).</li>
-		<li>Remove author names from official Tomboy plugins (#410314).</li>
-		<li>Update minimum requirements: gtk/gdk 2.6.0, gtk-sharp 2.6.0 (#412130).</li>
-		<li>Install DBus service file to --prefix when not auto detected.</li>
-		<li>Disable NoteOfTheDayPlugin by default.</li>
-		<li><a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_5_9/NEWS?view=markup">And more...</a></li>
-		<li><a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_5_9/ChangeLog?view=markup">Detailed ChangeLog</a></li>
+		<li>New GUI Features</li>
+		  <ul>
+		    <li>Bulleted Lists</li>
+		    <li>Note pinning in the main menu</li>
+		    <li>Integrated search and table of contents</li>
+		    <li>Firefox-like "find bar" for searching for text inside of a note</li>
+		    <li>Improved "Start Here" note and instructions</li>
+		    <li>Configurable plugins</li>
+		  </ul>
+		<li>Non-GUI Features</li>
+		  <ul>
+		    <li>Use NDesk's DBus Sharp</li>
+		    <li>Additional DBus methods for note synchronization via Conduit added</li>
+		  </ul>
+		<li>New Plugins</li>
+		  <ul>
+		    <li>Backlinks Plugin</li>
+		    <li>Bugzilla Plugin</li>
+		    <li>NoteOfTheDay Plugin</li>
+		  </ul>
+		<li><a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_6_0/NEWS?view=markup">And more...</a></li>
+		<li><a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_6_0/ChangeLog?view=markup">Detailed ChangeLog</a></li>
       </ul>
 
       <a name="get_involved"><h1>Get Involved</h1></a>
