@@ -1,3 +1,7 @@
+2007-03-05  Boyd Timothy  <btimothy@gmail.com>
+
+	* index.html: Updated for 0.6.0 release.
+
 2007-02-28  Boyd Timothy  <btimothy@gmail.com>
 
 	* images/applet-small.png: Updated to show the newer pin icons.
